# urdf_to_scene

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.txt  README.md  package.xml
config/: bbt_primitive_scene.urdf.xacro  opencrate.urdf.xacro  scene.urdf.xacro  shelf.urdf.xacro  utils.xacro
examples/: load_urdf.launch  load_urdf_robot.launch  load_urdf_scene.launch  scene.urdf.xacro
include/: scene_parser.h
include/scene_parser/: scene_parser.h
include/urdf_to_scene/: moveit_compatibility.h  scene_parser.h
launch/: load_robot.launch  load_urdf_robot.launch  load_urdf_scene.launch
mesh/: can.stl  can.yaml  can_4k.stl  metadata.xacro
src/: load_urdf.cpp  scene_parser.cpp
xacro/: planning_scene.xacro
xacro/collision_objects/: opencrate.urdf.xacro  shelf.urdf.xacro
