<package format="2">
	<name>scene_parser</name>
	<version>0.0.0</version>
	<description>Collision objects URDF parser</description>

	<license>BSD</license>
	<maintainer email="captain.yoshisaur@gmail.com">Captain Yoshi</maintainer>

	<buildtool_depend>catkin</buildtool_depend>

	<build_depend>roscpp</build_depend>
	<exec_depend>roscpp</exec_depend>
	<depend>eigen_conversions</depend>
	<depend>geometry_msgs</depend>
	<depend>moveit_core</depend>
	<depend>moveit_ros_planning</depend>
	<depend>moveit_ros_benchmarks</depend>
	<depend>moveit_ros_planning_interface</depend>
	<depend>moveit_task_constructor_core</depend>
	<depend>moveit_task_constructor_msgs</depend>
	<depend>visualization_msgs</depend>
	<depend>moveit_visual_tools</depend>
	<depend>urdf</depend>
</package>
